--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,4 +1,5 @@
-name: 'Auto Assign Action'
+name: 'Pull Request Labeler'
+
 on:
   pull_request:
     types: [opened, ready_for_review, labeled, unlabeled]
@@ -6,13 +7,12 @@ on:
     types: [opened, ready_for_review, labeled, unlabeled, reopened, synchronize]
 
 jobs:
-  add-reviews:
+  label:
     runs-on: ubuntu-latest
-    steps:
-      - uses: kentaro-m/auto-assign-action@v1.2.5
-        with:
-          configuration-path: '.github/list_auto_assign.yml'
-          repo-token: ${{ secrets.WORKFLOW_TOKEN }}
     permissions:
       contents: read
       pull-requests: write
+    steps:
+    - uses: actions/labeler@v4
+      with:
+        repo-token: "${{ secrets.WORKFLOW_TOKEN }}"
